apps/nightingale-harmoniahealth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nightingale-harmoniahealth
  labels:
    app.kubernetes.io/part-of: nightingale-harmoniahealth
