apps/nightingale-harmoniahealth/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: harmoniahealth-frontend-service
  namespace: nightingale-harmoniahealth
  labels:
    app.kubernetes.io/name: harmoniahealth-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: nightingale-harmoniahealth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: harmoniahealth-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
