apps/nightingale-harmoniahealth/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: harmoniahealth-node-service
  namespace: nightingale-harmoniahealth
  labels:
    app.kubernetes.io/name: harmoniahealth-node
    app.kubernetes.io/component: node-backend
    app.kubernetes.io/part-of: nightingale-harmoniahealth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: harmoniahealth-node
  ports:
    - name: http
      port: 6987
      targetPort: http
