apps/nightingale-harmoniahealth/service-rasa.yaml
apiVersion: v1
kind: Service
metadata:
  name: harmoniahealth-rasa-service
  namespace: nightingale-harmoniahealth
  labels:
    app.kubernetes.io/name: harmoniahealth-rasa
    app.kubernetes.io/component: rasa
    app.kubernetes.io/part-of: nightingale-harmoniahealth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: harmoniahealth-rasa
  ports:
    - name: rasa
      port: 5005
      targetPort: rasa
