apps/nightingale-harmoniahealth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harmoniahealth-ingress
  namespace: nightingale-harmoniahealth
  labels:
    app.kubernetes.io/name: nightingale-harmoniahealth
    app.kubernetes.io/part-of: nightingale-harmoniahealth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harmoniahealth.nightingaleheart.com
      secretName: harmoniahealth-tls
    - hosts:
        - api-harmoniahealth.nightingaleheart.com
      secretName: api-harmoniahealth-tls
  rules:
    - host: harmoniahealth.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harmoniahealth-frontend-service
                port:
                  number: 80
    - host: api-harmoniahealth.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harmoniahealth-node-service
                port:
                  number: 6987
